--- a/pset9/finance/templates/register.html
+++ b/pset9/finance/templates/register.html
@@ -15,6 +15,6 @@
         <div class="form-group">
             <input class="form-control" name="password-again" placeholder="Password Again" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button class="btn btn-primary" type="submit">Register</button>
     </form>
 {% endblock %}
